--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>All Challenges</title>
-  </head>
-  <body>
-    <ul>
-      {% for month in months %}
-      <a href=" {% url 'month-challenge' month %}">
-        <h1><li>{{month|title}}</li></h1>
-      </a>
-      {% endfor %}
-    </ul>
-  </body>
-</html>
+{% extends 'base.html' %} {% block page_title %}All Challenges{% endblock %}
+{%block content %} {% include 'challenges/includes/header.html' %}
+<ul>
+  {% for month in months %}
+  <a href=" {% url 'month-challenge' month %}">
+    <h1><li>{{month|title}}</li></h1>
+  </a>
+  {% endfor %}
+</ul>
+
+{% endblock %}
