--- a/challenges/templates/challenges/index.html
+++ b/challenges/templates/challenges/index.html
@@ -1,4 +1,9 @@
-{% extends 'base.html' %} {% block page_title %}All Challenges{% endblock %}
+{% extends 'base.html' %} 
+{% load static %} 
+{% block css_file %}
+<link rel="stylesheet" href="{% static 'challenges/challenges.css' %}" />
+{% endblock %} 
+{% block page_title %}All Challenges{% endblock %}
 {%block content %} {% include 'challenges/includes/header.html' %}
 <ul>
   {% for month in months %}
