--- a/challenges/templates/challenges/challenge.html
+++ b/challenges/templates/challenges/challenge.html
@@ -1,5 +1,14 @@
-{% extends 'base.html' %} {% block title %}{{ month|title }}{% endblock%}
-{%block content %} {% include 'challenges/includes/header.html' %}
+{% extends 'base.html' %}
+ {% block title %}{{ month|title }}{% endblock%}
+{%block content %} 
+{% load static %}
+
+{% block css_file %}
+<link rel="stylesheet" href="{% static 'challenges/challenge.css' %}" />
+<link rel="stylesheet" href="{% static 'challenges/includes/header.css' %}" />
+{% endblock %} 
+
+{% include 'challenges/includes/header.html' %}
 <h1>{{ month|title }}'s Challenge</h1>
 {% if text == None %}
 <p>No challenge for this month</p>
